...
        <item
            android:id="@+id/submitWork"
            android:title="Submit work"
            android:icon="@drawable/submit_works"/>

        <item
            android:id="@+id/yourWorks"
            android:title="Your works"
            android:icon="@drawable/your_works"/>

        <item
            android:id="@+id/collection"
            android:title="Collection"
            android:icon="@drawable/collection"/>

        <item
        android:id="@+id/browsingHistory"
        android:title="Browsing history"
...
